# open_mbc

./: .gitattributes  Cargo.toml  README.md  bundler.toml
src/: compressor.rs  lib.rs
src/compressor/: models.rs  process.rs
